astc_transcoder: - version was added - icon was added - release|debug build set up - precompiled headers were added - command line parser development

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 .vs/
 Debug/
 Release/
-
 projects/astc-transcoder/x64/
+
+.editorconfig
 projects/astc-transcoder/astc-transcoder.vcxproj.user
+sources/astc-transcoder/windows/main.aps
