--- a/projects/astc-transcoder/astc-transcoder.vcxproj
+++ b/projects/astc-transcoder/astc-transcoder.vcxproj
@@ -164,9 +164,11 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="..\..\sources\astc-transcoder\transcoder.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\astc-transcoder\command_line_parser.h" />
+    <ClInclude Include="..\..\include\astc-transcoder\transcoder.h" />
     <ClInclude Include="..\..\include\astc-transcoder\version.h" />
     <ClInclude Include="..\..\include\GXCommon\GXWarning.h" />
     <ClInclude Include="..\..\include\GXCommon\Windows\GXWarning.h" />
