--- a/projects/astc-transcoder/astc-transcoder.vcxproj.filters
+++ b/projects/astc-transcoder/astc-transcoder.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="..\..\sources\astc-transcoder\main.cpp">
       <Filter>Source Files\astc-transcoder</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\sources\astc-transcoder\transcoder.cpp">
+      <Filter>Source Files\astc-transcoder</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\include\stdafx.h">
@@ -48,6 +51,9 @@
       <Filter>Header Files\astc-transcoder</Filter>
     </ClInclude>
     <ClInclude Include="..\..\include\astc-transcoder\command_line_parser.h">
+      <Filter>Header Files\astc-transcoder</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\include\astc-transcoder\transcoder.h">
       <Filter>Header Files\astc-transcoder</Filter>
     </ClInclude>
   </ItemGroup>
