documentation: - documentation has been extended
installer:
- installer compilation has been added

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,11 @@
-.vs/
-Debug/
-Release/
-projects/astc-transcoder/x64/
+/.vs/
+/Debug/
+/Installer/
+/Release/
+/projects/astc-transcoder/x64/
+/projects/installer/installer/
 
 .editorconfig
-projects/astc-transcoder/astc-transcoder.vcxproj.user
-sources/astc-transcoder/windows/main.aps
+/projects/astc-transcoder/astc-transcoder.vcxproj.user
+/projects/installer/installer.vcxproj.user
+/sources/astc-transcoder/windows/main.aps
